--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,4 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-image: url(img/digital-technology-background-network-connection-260nw-2150304663.webp);
+    background-repeat: no-repeat;
 }
