--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,4 +4,6 @@
     box-sizing: border-box;
     background-image: url(img/digital-technology-background-network-connection-260nw-2150304663.webp);
     background-repeat: no-repeat;
+    background-size: cover;
+    
 }
